<resources>
    <string name="app_name">Sessions</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_chat">Chat</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_meeting">Meeting</string>
    <string name="title_chats">Chats</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account? </string>
    <string name="login">Login</string>
    <string name="reset">Reset</string>
    <string name="by_clicking_reset">By clicking RESET,</string>
    <string name="you_will_receive_an_email_to_reset_you_password">you will receive an email to reset you password</string>
    <string name="yestech_meet">Yestech Meet</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user">New user?</string>
    <string name="sign_up">Sign Up</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="FCM_PREF">com.theyestech.yestechmeet.fcm_pref</string>
    <string name="FCM_TOKEN">com.theyestech.yestechmeet.fcm_token</string>
    <string name="incoming_meeting_invitation">Incoming Meeting Invitation</string>
    <string name="new_meeting">New meeting</string>
    <string name="join_with_a_code">Join with a code</string>
    <string name="delete_conversation">Delete Conversation</string>
    <string name="archive_conversation">Archive Conversation</string>
    <string name="new_session">New session</string>
    <string name="title_session">Session</string>

</resources>