<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_chats">

    <fragment
        android:id="@+id/navigation_chats"
        android:name="com.theyestech.yestechmeet.fragments.ChatFragment"
        android:label="@string/title_chats"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_meeting"
        android:name="com.theyestech.yestechmeet.fragments.MeetingFragment"
        android:label="@string/title_meeting"
        tools:layout="@layout/fragment_meeting" />

    <fragment
        android:id="@+id/navigation_contacts"
        android:name="com.theyestech.yestechmeet.fragments.ContactsFragment"
        android:label="@string/title_contacts"
        tools:layout="@layout/fragment_contacts" />
</navigation>